# skey-2.0

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  backupPATH.txt  buildall  configure.ac
skey-2.0/: addPath.sh  keytest.sh
skey-2.0/include/: Makefile.am
skey-2.0/lib/: Makefile.am
skey-2.0/man/: Makefile.am
skey-2.0/other/: Makefile.am
skey-2.0/skey-src/man/: key.1
skey-2.0/skey-src/src/: md4.c  md4.h  put.c  skey.c  skey.h  skeyinit.c  skeylogin.c  skeysh.c  skeysubr.c  sysv_shadow.h
